manifests/platform-config/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: maas-default-gateway
  namespace: openshift-ingress
  annotations:
    # Required on RHOAI 3.5: without this, odh-model-controller installs
    # AuthPolicy {gateway}-authn on the same Gateway and Kuadrant overrides
    # MaaS AuthPolicy maas-gateway-auth (API keys / X-MaaS-Username).
    # https://docs.redhat.com/en/documentation/red_hat_openshift_ai_self-managed/3.5/html/govern_llm_access_with_models-as-a-service/
    opendatahub.io/managed: "false"
    security.opendatahub.io/authorino-tls-bootstrap: "true"
spec:
  gatewayClassName: data-science-gateway-class
  listeners:
    - name: maas
      hostname: "maas.CLUSTER_DOMAIN_PLACEHOLDER"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: cert-manager-ingress-cert
      allowedRoutes:
        namespaces:
          from: All
